// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SEO render children correctly 1`] = `
<DocumentFragment>
  <title>
    pagetitle prop Sitetitle prop
  </title>
  <meta
    content="description prop"
    name="description"
  />
  <meta
    content="../../image.png"
    name="image"
  />
  <link
    href="../../image.png"
    rel="icon"
    sizes="any"
    type="image/svg+xml"
  />
  <link
    charset="UTF-8"
    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
    rel="stylesheet"
    type="text/css"
  />
  <link
    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
    rel="stylesheet"
    type="text/css"
  />
  <div>
    children div for SEO component
  </div>
</DocumentFragment>
`;

exports[`SEO render fallback values 1`] = `
<DocumentFragment>
  <title>
    page title from prop Brushella
  </title>
  <meta
    content="Brushella Art and Decor store"
    name="description"
  />
  <meta
    content="/brushella-icon.svg"
    name="image"
  />
  <link
    href="/brushella-icon.svg"
    rel="icon"
    sizes="any"
    type="image/svg+xml"
  />
  <link
    charset="UTF-8"
    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
    rel="stylesheet"
    type="text/css"
  />
  <link
    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
    rel="stylesheet"
    type="text/css"
  />
</DocumentFragment>
`;
